--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <div class="invite-name ">Игорь & Анна</div>
     </div>
 </section>
-<section class="attention">
-    <div class="container">
+<section class="attention ">
+    <div class="container hidden">
         <img src="images/two.jpg" alt="photo">
         <div class="attention-info">
-            <div class="attention-title">
+            <div class="attention-title ">
                 <div class="attention-we">Мы</div>
                 официально <br> станем семьей
             </div>
-            <div class="attention-text">
+            <div class="attention-text ">
                 Если вы читаете этот текст, значит, совсем скоро один из нас окажется в свадебном платье… <br> Уверены, вы уже догадались, кто!
             </div>
         </div>
@@ -64,7 +64,7 @@
             <div>07</div>
             <div>25</div>
         </div>
-        <div class="main-title">
+        <div class="main-title hidden">
             <div class="main-your">Вас</div>
             мы ждем
         </div>
@@ -76,7 +76,7 @@
 </section>
 <section class="location">
     <div class="container">
-        <div class="location-title">
+        <div class="location-title hidden">
             Локация
         </div>
         <div class="gallery">
@@ -98,7 +98,7 @@
 <section class="program">
     <div class="container">
         <div class="program-title">
-            <div class="program-day">Дня</div>
+            <div class="program-day hidden">Дня</div>
             тайминг
         </div>
         <div class="timeline">
@@ -195,13 +195,13 @@
                 нашей свадьбы.
             </div>
             <div class="dresscode-info-blocks">
-                <div class="dresscode-info-block first"></div>
-                <div class="dresscode-info-block second"></div>
-                <div class="dresscode-info-block third"></div>
-                <div class="dresscode-info-block four"></div>
-                <div class="dresscode-info-block five"></div>
-                <div class="dresscode-info-block six"></div>
-                <div class="dresscode-info-block seven"></div>
+                <div class="dresscode-info-block first hidden"></div>
+                <div class="dresscode-info-block second hidden"></div>
+                <div class="dresscode-info-block third hidden"></div>
+                <div class="dresscode-info-block four hidden"></div>
+                <div class="dresscode-info-block five hidden"></div>
+                <div class="dresscode-info-block six hidden"></div>
+                <div class="dresscode-info-block seven hidden"></div>
             </div>
         </div>
     </div>
