--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 </section>
 <section class="program">
     <div class="container">
-        <div class="program-title">
-            <div class="program-day hidden">Дня</div>
+        <div class="program-title hidden">
+            <div class="program-day ">Дня</div>
             тайминг
         </div>
         <div class="timeline">
